[package]
name = "pong-russh"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
delegate = "0.13.3"
futures = "0.3.30"
ratatui = { version = "0.29.0" }
russh = "0.51.1"
scopeguard = "1.2.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
